[gd_scene load_steps=3 format=3 uid="uid://contestsetupdlg1"]

[ext_resource type="Script" path="res://src/ui/contest_setup_dialog.gd" id="1_script"]
[ext_resource type="Theme" path="res://theme/game_theme.tres" id="2_theme"]

[node name="ContestSetupDialog" type="PanelContainer"]
theme = ExtResource("2_theme")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -180.0
offset_right = 250.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Contest Entry"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="RankPanel" type="VBoxContainer" parent="MarginContainer/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RankLabel" type="Label" parent="MarginContainer/VBox/HBox/RankPanel"]
layout_mode = 2
text = "Select Rank"
horizontal_alignment = 1

[node name="RankList" type="VBoxContainer" parent="MarginContainer/VBox/HBox/RankPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 4

[node name="InfoPanel" type="VBoxContainer" parent="MarginContainer/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="OpponentLabel" type="Label" parent="MarginContainer/VBox/HBox/InfoPanel"]
layout_mode = 2
text = "Opponent: ???"

[node name="StatsLabel" type="Label" parent="MarginContainer/VBox/HBox/InfoPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "Style: Greedy
Capacity: 100

Preferences: ???"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBox/HBox/InfoPanel"]
layout_mode = 2

[node name="RewardsLabel" type="Label" parent="MarginContainer/VBox/HBox/InfoPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 12
text = "Rewards (Win):
  $150
  +10 XP
  +50 Followers"

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="EntryFeeLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Entry Fee: $50"
horizontal_alignment = 1

[node name="HintLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 11
text = "W/S: Select Rank | E: Enter Contest | Q: Back"
horizontal_alignment = 1
